--- a/hw1/hw1.cabal
+++ b/hw1/hw1.cabal
@@ -24,4 +24,5 @@ library
                        , megaparsec
                        , containers
                        , mtl
+                       , clock
   default-language:    Haskell2010
